--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^5.8.0",
     "gatsby-plugin-image": "^3.8.0",
+    "gatsby-plugin-netlify": "^5.1.1",
     "gatsby-plugin-sharp": "^5.8.0",
     "gatsby-plugin-sitemap": "^6.8.0",
     "gatsby-plugin-styled-components": "^6.8.0",
